<resources>
    <string name="app_name">Sunshine</string>
    <string name="todays_date">Today, June 12</string>
    <string name="todays_temp_F">21°</string>
    <string name="todays_temp_C">8°</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="zip_code">97232</string>
    <string name="hello_world">Hello world!</string>

    <!-- Default Preferences -->

    <!-- Location -->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_default">97232</string>

    <!-- Units -->
    <string name="pref_units_label">Units</string>
    <string name="pref_units_key">units</string>
    <string-array name="pref_units_array">
        <item>Standard</item>
        <item>Metric</item>
    </string-array>
    <string name="pref_units_default">Standard</string>
    <string name="pref_metric_units">Metric</string>
    <string name="pref_standard_units">Standard</string>
    <string-array name="pref_units_values">
        <item>Standard</item>
        <item>Metric</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
