<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />
    <ListPreference
        android:dialogTitle="@string/pref_units_label"
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:summary=""
        android:entries="@array/pref_units_array"
        android:entryValues="@array/pref_units_values"
        android:defaultValue="@string/pref_units_default"
        />
    <Preference
        android:title="Verify Location"
        android:key="pref_verify_loc"
        />
</PreferenceScreen>